docroot/themes/custom/twentyeighteen/sass/components/_main.scss
.mq-main {
  max-width: none;
  margin-top: 0;
  margin-bottom: 0;
  background-color: $pale-yellow;

  @include breakpoint($medium-max) {
    width: 1200px;
  }
}

.region-content {
  position: relative;
  padding-bottom: 2rem;
  padding-right: 20px;
  padding-left: 20px;

  @include breakpoint($medium) {
    padding-right: 0;
    padding-left: 0;
  }
}

